Fixed css overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,16 @@ body, html {
     height: 100%;
     width: 100%;
     min-height: 100vh;
-    overflow:auto;
+    overflow: auto;
 }
 
-.hero, .about {
+.hero {
     background-color: transparent;
     overflow: hidden;
+}
+
+.about {
+    background-color: transparent;
 }
 
 .navbar {
